# AudioConverter

./: Cargo.toml  README.md  README_en.md  run_performance_tests.sh  run_tests.sh
benches/: audio_processing.rs
src/: lib.rs  main.rs
src/audio/: converter.rs  decoder.rs  mod.rs
src/cli/: args.rs
src/config/: settings.rs
src/output/: array_writer.rs  mod.rs
test_data/: generate_test_audio.rs
tests/: audio_format_tests.rs  cli_tests.rs  error_handling_tests.rs  integration_tests.rs  performance_tests.rs  property_tests.rs
